@@ -1,10 +1,11 @@
 = 3.4.4 (not released yet)
 - Fix set_parent for render field on blank records added by default on subforms
 - Enable sorting on selected draggable list, so it can be used on config_list
+- Remove unfinished nested_auto_open feature, it was working only if render_component is used, which is not recommended way
 
 = 3.4.3
 - default search columns doesn't include association columns (broken on 3.4.2), it slowing down search with no point (searching by association's primary key)
-- More unobtrusive html views
+- More unobtrusive html views, activescaffold html views doesn't use javascript anymore so JS files can be loaded at page bottom
 
 = 3.4.2
 - fix tableless on latest rails4 versions
